# fantasy-football-etl

./: .gitignore  README.md  helper_functions.py  main.py  pyproject.toml  tabulate_playoff_teams.py
2023 Season/: players.csv  playoff_teams.txt
2023 Season/Post Season Positions/: DEFs.csv  Ks.csv  QBs.csv  RBs.csv  TEs.csv  WRs.csv
2024 Season/: players.csv
2024 Season/Post Season Positions/: DEFs.csv  DSTs.csv  Ks.csv  QBs.csv  RBs.csv  TEs.csv  WRs.csv
2025 Season/: players.csv  playoff_teams.txt
2025 Season/Post Season Positions/: DEFs.csv  DSTs.csv  Ks.csv  QBs.csv  RBs.csv  TEs.csv  WRs.csv
fantasy_football_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
